.k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hackernews-deploy
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: hn
    spec:
      containers:
      - name: hn
        image: gcr.io/hackernews-io/github-ivanvanderbyl-ember-hackernews-pwa:${execution.from_revision.revision}
        ports:
        - containerPort: 8080
